# classlist-scraper

./: Cargo.toml  flake.nix
src/: main.rs
